--- a/notes-app/package.json
+++ b/notes-app/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^4.0.0",
-    "validator": "^13.0.0"
+    "validator": "^13.0.0",
+    "yargs": "^15.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
